// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopViewer empty 1`] = `
<div
  class="desktop-viewer container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-md-6"
    >
      <div
        class="remote-viewer"
      >
        <div
          class="remote-viewer-launch"
        >
          <button
            class="btn btn-lg btn-default"
            disabled=""
            type="button"
          >
            Launch Remote Viewer
          </button>
        </div>
      </div>
    </div>
    <div
      class="col-md-6"
    >
      <div
        class="manual-connection"
      >
        <h2>
          Manual Connection
        </h2>
        <p>
          No connection available.
        </p>
        <div>
          <dl
            class="dl-horizontal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DesktopViewer with Spice and VNC 1`] = `
<div
  class="desktop-viewer container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-md-6"
    >
      <div
        class="remote-viewer"
      >
        <div
          class="remote-viewer-launch"
        >
          <button
            class="btn btn-lg btn-default"
            type="button"
          >
            Launch Remote Viewer
          </button>
        </div>
        <div>
          <div
            class="remote-viewer-more-info"
          >
            <a
              href="#"
              tabindex="0"
            >
              <span
                class="fa fa-angle-right"
              />
                More Information
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-md-6"
    >
      <div
        class="manual-connection"
      >
        <h2>
          Manual Connection
        </h2>
        <p>
          Connect with any viewer application for following protocols:
        </p>
        <div>
          <dl
            class="dl-horizontal"
          >
            <dt>
              Address:
            </dt>
            <dd>
              my.host.com
            </dd>
            <dt>
              SPICE Port:
            </dt>
            <dd>
              5900
            </dd>
            <dt>
              SPICE TLS Port:
            </dt>
            <dd>
              5901
            </dd>
            <dt>
              VNC Port:
            </dt>
            <dd>
              5902
            </dd>
            <dt>
              VNC TLS Port:
            </dt>
            <dd>
              5903
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DesktopViewer with custom more-info content 1`] = `
<DesktopViewer
  spice={
    Object {
      "address": "my.host.com",
      "port": 5900,
      "tlsPort": "5901",
    }
  }
  textAddress="Address:"
  textConnectWith="Connect with any viewer application for following protocols:"
  textConnectWithRemoteViewer="Launch Remote Viewer"
  textManualConnection="Manual Connection"
  textMoreInfo="More Information"
  textNoProtocol="No connection available."
  textSpice="Spice"
  textSpiceAddress="SPICE Address:"
  textSpicePort="SPICE Port:"
  textSpiceTlsPort="SPICE TLS Port:"
  textVNC="VNC"
  textVNCAddress="VNC Address:"
  textVNCPort="VNC Port:"
  textVNCTlsPort="VNC TLS Port:"
  vnc={
    Object {
      "address": "my.host.com",
      "port": 5902,
      "tlsPort": "5903",
    }
  }
>
  <Grid
    bsClass="container"
    className="desktop-viewer"
    componentClass="div"
    fluid={true}
  >
    <div
      className="desktop-viewer container-fluid"
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <div
          className="row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={6}
          >
            <div
              className="col-md-6"
            >
              <ConnectWithRemoteViewer
                onDownload={[Function]}
                onGenerate={[Function]}
                spice={
                  Object {
                    "address": "my.host.com",
                    "port": 5900,
                    "tlsPort": "5901",
                  }
                }
                textAddress="Address:"
                textConnectWith="Connect with any viewer application for following protocols:"
                textConnectWithRemoteViewer="Launch Remote Viewer"
                textManualConnection="Manual Connection"
                textMoreInfo="More Information"
                textNoProtocol="No connection available."
                textSpice="Spice"
                textSpiceAddress="SPICE Address:"
                textSpicePort="SPICE Port:"
                textSpiceTlsPort="SPICE TLS Port:"
                textVNC="VNC"
                textVNCAddress="VNC Address:"
                textVNCPort="VNC Port:"
                textVNCTlsPort="VNC TLS Port:"
                vnc={
                  Object {
                    "address": "my.host.com",
                    "port": 5902,
                    "tlsPort": "5903",
                  }
                }
              >
                <div
                  className="remote-viewer"
                >
                  <div
                    className="remote-viewer-launch"
                  >
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsSize="large"
                      bsStyle="default"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <button
                        className="btn btn-lg btn-default"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Launch Remote Viewer
                      </button>
                    </Button>
                  </div>
                  <MoreInformation
                    textMoreInfo="More Information"
                  >
                    <div>
                      <div
                        className="remote-viewer-more-info"
                      >
                        <a
                          href="#"
                          onClick={[Function]}
                          tabIndex="0"
                        >
                          <span
                            className="fa fa-angle-right"
                          />
                            
                          More Information
                        </a>
                      </div>
                    </div>
                  </MoreInformation>
                </div>
              </ConnectWithRemoteViewer>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={6}
          >
            <div
              className="col-md-6"
            >
              <ManualConnection
                spice={
                  Object {
                    "address": "my.host.com",
                    "port": 5900,
                    "tlsPort": "5901",
                  }
                }
                textAddress="Address:"
                textConnectWith="Connect with any viewer application for following protocols:"
                textConnectWithRemoteViewer="Launch Remote Viewer"
                textManualConnection="Manual Connection"
                textMoreInfo="More Information"
                textNoProtocol="No connection available."
                textSpice="Spice"
                textSpiceAddress="SPICE Address:"
                textSpicePort="SPICE Port:"
                textSpiceTlsPort="SPICE TLS Port:"
                textVNC="VNC"
                textVNCAddress="VNC Address:"
                textVNCPort="VNC Port:"
                textVNCTlsPort="VNC TLS Port:"
                vnc={
                  Object {
                    "address": "my.host.com",
                    "port": 5902,
                    "tlsPort": "5903",
                  }
                }
              >
                <div
                  className="manual-connection"
                >
                  <h2>
                    Manual Connection
                  </h2>
                  <p>
                    Connect with any viewer application for following protocols:
                  </p>
                  <div>
                    <dl
                      className="dl-horizontal"
                    >
                      <Detail
                        title="Address:"
                        value="my.host.com"
                      >
                        <dt>
                          Address:
                        </dt>
                        <dd>
                          my.host.com
                        </dd>
                      </Detail>
                      <Detail
                        title="SPICE Port:"
                        value={5900}
                      >
                        <dt>
                          SPICE Port:
                        </dt>
                        <dd>
                          5900
                        </dd>
                      </Detail>
                      <Detail
                        title="SPICE TLS Port:"
                        value="5901"
                      >
                        <dt>
                          SPICE TLS Port:
                        </dt>
                        <dd>
                          5901
                        </dd>
                      </Detail>
                      <Detail
                        title="VNC Port:"
                        value={5902}
                      >
                        <dt>
                          VNC Port:
                        </dt>
                        <dd>
                          5902
                        </dd>
                      </Detail>
                      <Detail
                        title="VNC TLS Port:"
                        value="5903"
                      >
                        <dt>
                          VNC TLS Port:
                        </dt>
                        <dd>
                          5903
                        </dd>
                      </Detail>
                    </dl>
                  </div>
                </div>
              </ManualConnection>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Grid>
</DesktopViewer>
`;

exports[`default MoreInformationContent 1`] = `
<div>
  <p>
    Clicking "Launch Remote Viewer" will download a .vv file and launch 
    <i>
      Remote Viewer
    </i>
  </p>
  <p>
    <i>
      Remote Viewer
    </i>
     is available for most operating systems. To install it, search for it in GNOME Software or run the following:
  </p>
  <ul>
    <li>
      <div
        class="more-information-install"
      >
        <b>
          RHEL, CentOS:
        </b>
        sudo yum install virt-viewer
      </div>
    </li>
    <li>
      <div
        class="more-information-install"
      >
        <b>
          Fedora:
        </b>
        sudo dnf install virt-viewer
      </div>
    </li>
    <li>
      <div
        class="more-information-install"
      >
        <b>
          Ubuntu, Debian:
        </b>
        sudo apt-get install virt-viewer
      </div>
    </li>
    <li>
      <div
        class="more-information-install"
      >
        <b>
          Windows:
        </b>
        <div>
          Download the MSI from 
          <a
            href="https://virt-manager.org/download/"
            rel="noopener noreferrer"
            target="_blank"
          >
            virt-manager.org
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
